# agentic-research-assistant-with-MCP

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
evals/: dataset.json  harness.py  judge.py  metrics.py
evals/fixtures/: search.json
src/research_assistant/: __init__.py  config.py  graph.py  main.py  mcp_client.py  state.py
src/research_assistant/agents/: planner.py  specialist.py  synthesizer.py
src/research_assistant/mcp_servers/: code_server.py  search_server.py  summarize_server.py
tests/: test_graph_routing.py  test_mcp_code_server.py  test_mcp_search_server.py  test_metrics.py
